# StarCrown

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: App.svelte  Popup.svelte  database.rs  hotkey.rs  main.js  main.rs  popup_manager.rs  store.js  text_expander.rs
