[package]
name = "goldencrown-expander"
version = "0.1.0"
description = "Cross-platform text expander (aText-like) built with Tauri + Rust + Svelte"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "clipboard-read-text", "clipboard-write-text", "global-shortcut-all", "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
rdev = { version = "0.5" }
enigo = { version = "0.2" }
cfg-if = "1"
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]


